--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-gauge-chart": "^0.4.1",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
     "react-uuid": "^2.0.0",
